--- a/_sass/colors/dark-syntax.scss
+++ b/_sass/colors/dark-syntax.scss
@@ -2,71 +2,90 @@
  * The syntax dark mode styles.
  */
 
+
+
+
 @mixin dark-syntax {
   /* syntax highlight colors from https://raw.githubusercontent.com/jwarby/pygments-css/master/monokai.css */
+  
   .highlight pre { background-color: var(--highlight-bg-color); }
   .highlight .hll { background-color: var(--highlight-bg-color); }
-  .highlight .c { color: #75715e; } /* Comment */
-  .highlight .err { color: #960050; background-color: #1e0010; } /* Error */
-  .highlight .k { color: #66d9ef; } /* Keyword */
-  .highlight .l { color: #ae81ff; } /* Literal */
-  .highlight .n { color: #f8f8f2; } /* Name */
-  .highlight .o { color: #f92672; } /* Operator */
-  .highlight .p { color: #f8f8f2; } /* Punctuation */
-  .highlight .cm { color: #75715e; } /* Comment.Multiline */
-  .highlight .cp { color: #75715e; } /* Comment.Preproc */
-  .highlight .c1 { color: #75715e; } /* Comment.Single */
-  .highlight .cs { color: #75715e; } /* Comment.Special */
-  .highlight .ge { color: inherit; font-style: italic; } /* Generic.Emph */
-  .highlight .gs { font-weight: bold; } /* Generic.Strong */
-  .highlight .kc { color: #66d9ef; } /* Keyword.Constant */
-  .highlight .kd { color: #66d9ef; } /* Keyword.Declaration */
-  .highlight .kn { color: #f92672; } /* Keyword.Namespace */
-  .highlight .kp { color: #66d9ef; } /* Keyword.Pseudo */
-  .highlight .kr { color: #66d9ef; } /* Keyword.Reserved */
-  .highlight .kt { color: #66d9ef; } /* Keyword.Type */
-  .highlight .ld { color: #e6db74; } /* Literal.Date */
-  .highlight .m { color: #ae81ff; } /* Literal.Number */
-  .highlight .s { color: #e6db74; } /* Literal.String */
-  .highlight .na { color: #a6e22e; } /* Name.Attribute */
-  .highlight .nb { color: #f8f8f2; } /* Name.Builtin */
-  .highlight .nc { color: #a6e22e; } /* Name.Class */
-  .highlight .no { color: #66d9ef; } /* Name.Constant */
-  .highlight .nd { color: #a6e22e; } /* Name.Decorator */
-  .highlight .ni { color: #f8f8f2; } /* Name.Entity */
-  .highlight .ne { color: #a6e22e; } /* Name.Exception */
-  .highlight .nf { color: #a6e22e; } /* Name.Function */
-  .highlight .nl { color: #f8f8f2; } /* Name.Label */
-  .highlight .nn { color: #f8f8f2; } /* Name.Namespace */
-  .highlight .nx { color: #a6e22e; } /* Name.Other */
-  .highlight .py { color: #f8f8f2; } /* Name.Property */
-  .highlight .nt { color: #f92672; } /* Name.Tag */
-  .highlight .nv { color: #f8f8f2; } /* Name.Variable */
-  .highlight .ow { color: #f92672; } /* Operator.Word */
-  .highlight .w { color: #f8f8f2; } /* Text.Whitespace */
-  .highlight .mf { color: #ae81ff; } /* Literal.Number.Float */
-  .highlight .mh { color: #ae81ff; } /* Literal.Number.Hex */
-  .highlight .mi { color: #ae81ff; } /* Literal.Number.Integer */
-  .highlight .mo { color: #ae81ff; } /* Literal.Number.Oct */
-  .highlight .sb { color: #e6db74; } /* Literal.String.Backtick */
-  .highlight .sc { color: #e6db74; } /* Literal.String.Char */
-  .highlight .sd { color: #e6db74; } /* Literal.String.Doc */
-  .highlight .s2 { color: #e6db74; } /* Literal.String.Double */
-  .highlight .se { color: #ae81ff; } /* Literal.String.Escape */
-  .highlight .sh { color: #e6db74; } /* Literal.String.Heredoc */
-  .highlight .si { color: #e6db74; } /* Literal.String.Interpol */
-  .highlight .sx { color: #e6db74; } /* Literal.String.Other */
-  .highlight .sr { color: #e6db74; } /* Literal.String.Regex */
-  .highlight .s1 { color: #e6db74; } /* Literal.String.Single */
-  .highlight .ss { color: #e6db74; } /* Literal.String.Symbol */
-  .highlight .bp { color: #f8f8f2; } /* Name.Builtin.Pseudo */
-  .highlight .vc { color: #f8f8f2; } /* Name.Variable.Class */
-  .highlight .vg { color: #f8f8f2; } /* Name.Variable.Global */
-  .highlight .vi { color: #f8f8f2; } /* Name.Variable.Instance */
-  .highlight .il { color: #ae81ff; } /* Literal.Number.Integer.Long */
-  .highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
-  .highlight .gd { color: #f92672; background-color: #561c08; } /* Generic.Deleted & Diff Deleted */
-  .highlight .gi { color: #a6e22e; background-color: #0b5858; } /* Generic.Inserted & Diff Inserted */
+  .highlight .c { color: #777777; font-style: italic } /* Comment */
+  .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
+  .highlight .esc { color: #cccccc } /* Escape */
+  .highlight .g { color: #cccccc } /* Generic */
+  .highlight .k { color: #7686bb; font-weight: bold } /* Keyword */
+  .highlight .l { color: #cccccc } /* Literal */
+  .highlight .n { color: #cccccc } /* Name */
+  .highlight .o { color: #cccccc } /* Operator */
+  .highlight .x { color: #cccccc } /* Other */
+  .highlight .p { color: #cccccc } /* Punctuation */
+  .highlight .ch { color: #777777; font-style: italic } /* Comment.Hashbang */
+  .highlight .cm { color: #777777; font-style: italic } /* Comment.Multiline */
+  .highlight .cp { color: #777777; font-style: italic } /* Comment.Preproc */
+  .highlight .cpf { color: #777777; font-style: italic } /* Comment.PreprocFile */
+  .highlight .c1 { color: #777777; font-style: italic } /* Comment.Single */
+  .highlight .cs { color: #777777; font-style: italic } /* Comment.Special */
+  .highlight .gd { color: #cccccc } /* Generic.Deleted */
+  .highlight .ge { color: #cccccc } /* Generic.Emph */
+  .highlight .gr { color: #cccccc } /* Generic.Error */
+  .highlight .gh { color: #cccccc } /* Generic.Heading */
+  .highlight .gi { color: #cccccc } /* Generic.Inserted */
+  .highlight .go { color: #cccccc } /* Generic.Output */
+  .highlight .gp { color: #ffffff } /* Generic.Prompt */
+  .highlight .gs { color: #cccccc } /* Generic.Strong */
+  .highlight .gu { color: #cccccc } /* Generic.Subheading */
+  .highlight .gt { color: #cccccc } /* Generic.Traceback */
+  .highlight .kc { color: #7686bb; font-weight: bold } /* Keyword.Constant */
+  .highlight .kd { color: #7686bb; font-weight: bold } /* Keyword.Declaration */
+  .highlight .kn { color: #7686bb; font-weight: bold } /* Keyword.Namespace */
+  .highlight .kp { color: #7686bb; font-weight: bold } /* Keyword.Pseudo */
+  .highlight .kr { color: #7686bb; font-weight: bold } /* Keyword.Reserved */
+  .highlight .kt { color: #7686bb; font-weight: bold } /* Keyword.Type */
+  .highlight .ld { color: #cccccc } /* Literal.Date */
+  .highlight .m { color: #4FB8CC } /* Literal.Number */
+  .highlight .s { color: #51cc99 } /* Literal.String */
+  .highlight .na { color: #cccccc } /* Name.Attribute */
+  .highlight .nb { color: #cccccc } /* Name.Builtin */
+  .highlight .nc { color: #cccccc } /* Name.Class */
+  .highlight .no { color: #cccccc } /* Name.Constant */
+  .highlight .nd { color: #cccccc } /* Name.Decorator */
+  .highlight .ni { color: #cccccc } /* Name.Entity */
+  .highlight .ne { color: #cccccc } /* Name.Exception */
+  .highlight .nf { color: #6a6aff } /* Name.Function */
+  .highlight .nl { color: #cccccc } /* Name.Label */
+  .highlight .nn { color: #cccccc } /* Name.Namespace */
+  .highlight .nx { color: #e2828e } /* Name.Other */
+  .highlight .py { color: #cccccc } /* Name.Property */
+  .highlight .nt { color: #cccccc } /* Name.Tag */
+  .highlight .nv { color: #7AB4DB; font-weight: bold } /* Name.Variable */
+  .highlight .ow { color: #cccccc } /* Operator.Word */
+  .highlight .w { color: #bbbbbb } /* Text.Whitespace */
+  .highlight .mb { color: #4FB8CC } /* Literal.Number.Bin */
+  .highlight .mf { color: #4FB8CC } /* Literal.Number.Float */
+  .highlight .mh { color: #4FB8CC } /* Literal.Number.Hex */
+  .highlight .mi { color: #4FB8CC } /* Literal.Number.Integer */
+  .highlight .mo { color: #4FB8CC } /* Literal.Number.Oct */
+  .highlight .sa { color: #51cc99 } /* Literal.String.Affix */
+  .highlight .sb { color: #51cc99 } /* Literal.String.Backtick */
+  .highlight .sc { color: #51cc99 } /* Literal.String.Char */
+  .highlight .dl { color: #51cc99 } /* Literal.String.Delimiter */
+  .highlight .sd { color: #51cc99 } /* Literal.String.Doc */
+  .highlight .s2 { color: #51cc99 } /* Literal.String.Double */
+  .highlight .se { color: #51cc99 } /* Literal.String.Escape */
+  .highlight .sh { color: #51cc99 } /* Literal.String.Heredoc */
+  .highlight .si { color: #51cc99 } /* Literal.String.Interpol */
+  .highlight .sx { color: #51cc99 } /* Literal.String.Other */
+  .highlight .sr { color: #51cc99 } /* Literal.String.Regex */
+  .highlight .s1 { color: #51cc99 } /* Literal.String.Single */
+  .highlight .ss { color: #51cc99 } /* Literal.String.Symbol */
+  .highlight .bp { color: #cccccc } /* Name.Builtin.Pseudo */
+  .highlight .fm { color: #6a6aff } /* Name.Function.Magic */
+  .highlight .vc { color: #7AB4DB; font-weight: bold } /* Name.Variable.Class */
+  .highlight .vg { color: #BE646C; font-weight: bold } /* Name.Variable.Global */
+  .highlight .vi { color: #7AB4DB; font-weight: bold } /* Name.Variable.Instance */
+  .highlight .vm { color: #7AB4DB; font-weight: bold } /* Name.Variable.Magic */
+  .highlight .il { color: #4FB8CC } /* Literal.Number.Integer.Long */
   
   /* -----  my custom styles ----- */
   .highlight { scrollbar-width: thin; scrollbar-color: var(--code-header-muted-color) var(--highlight-bg-color); } /* thin scrollbar */
