--- a/_sass/layout/post.scss
+++ b/_sass/layout/post.scss
@@ -74,9 +74,9 @@ img.preview-img {
     color: var(--link-color);
 
     &:hover {
-      background: #2a408e;
+      background: #45794e;
       color: #fff;
-      border-color: #2a408e;
+      border-color: #5db372;
     }
 
     &.disabled {
