--- a/_sass/layout/post.scss
+++ b/_sass/layout/post.scss
@@ -74,9 +74,9 @@ img.preview-img {
     color: var(--link-color);
 
     &:hover {
-      background: #45794e;
-      color: #fff;
-      border-color: #5db372;
+      background: #2d2d2d;
+      color: #97df90;
+      border-color: #797979;
     }
 
     &.disabled {
