--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -278,8 +278,8 @@ img[data-src] {
     margin: 0 0.35rem 0.5rem 0;
 
     &:hover {
-      background-color: #2a408e;
-      border-color: #2a408e;
+      background-color: #4b6650;
+      border-color: #85ac82;
       color: #fff;
       transition: none;
     }
